--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^17.1.2",
