--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-jwt": "^0.0.42",
     "bcrypt": "^5.0.0",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
