--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,11 @@
     "@types/hapi__joi": "^17.1.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.21.1",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
