--- a/server/package.json
+++ b/server/package.json
@@ -1,42 +1,47 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:seed": "knex --knexfile knexfile.ts seed:run"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/express-jwt": "^0.0.42",
-    "bcrypt": "^5.0.0",
-    "celebrate": "^12.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.1",
-    "multer": "^1.4.2",
-    "sqlite3": "^4.2.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/hapi__joi": "^17.1.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/multer": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.21.1",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
-  }
+   "name": "server",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
+      "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+      "knex:seed": "knex --knexfile knexfile.ts seed:run",
+      "start": "ts-node src/index.ts"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@types/express-jwt": "^0.0.42",
+      "bcrypt": "^5.0.0",
+      "celebrate": "^12.1.1",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "express-jwt": "^5.3.3",
+      "jsonwebtoken": "^8.5.1",
+      "knex": "^0.21.1",
+      "multer": "^1.4.2",
+      "reflect-metadata": "^0.1.10",
+      "sqlite3": "^4.2.0",
+      "typeorm": "0.2.25",
+      "mysql": "^2.14.1"
+   },
+   "devDependencies": {
+      "@types/bcrypt": "^3.0.0",
+      "@types/cors": "^2.8.6",
+      "@types/express": "^4.17.6",
+      "@types/hapi__joi": "^17.1.2",
+      "@types/jsonwebtoken": "^8.5.0",
+      "@types/multer": "^1.4.3",
+      "@types/node": "^8.0.29",
+      "@typescript-eslint/eslint-plugin": "^3.2.0",
+      "@typescript-eslint/parser": "^3.2.0",
+      "eslint": "^6.8.0",
+      "eslint-config-airbnb-base": "^14.1.0",
+      "eslint-plugin-import": "^2.21.1",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0-pre.44",
+      "typescript": "3.3.3333"
+   }
 }
