--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express-jwt": "^0.0.42",
+    "@prisma/client": "^2.0.0",
     "bcrypt": "^5.0.0",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
@@ -24,6 +24,9 @@
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
+    "@prisma/cli": "2.0.0",
+    "@types/express-jwt": "^0.0.42",
+    "@types/node": "^14.0.13",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
@@ -37,6 +40,6 @@
     "eslint-plugin-import": "^2.21.1",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.5"
   }
 }
